refactor: BlockDomainProvider 수정
1. 코드 가독성을 높이기 위해 스타일 변경
2. StringUtils 를 활용하도록 수정